swagger user endpoint fix
